--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,33 @@
-/*Schrijf hier jouw eigen CSS!*/
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: yellow;
+}
+
+h1 {
+    font-size: 36px;
+    color: black;
+    margin-bottom: 10px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.top-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: yellow;
+    padding: 20px;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+
