--- a/src/index.css
+++ b/src/index.css
@@ -43,9 +43,10 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: dodgerblue;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: #f9f9f9;
 }
 button:hover {
   border-color: #646cff;
